--- a/data/css/styles.css
+++ b/data/css/styles.css
@@ -44,25 +44,19 @@ nav ul li a:hover {
     top: 15px;
 }
 
-#theme-switch {
-    display: none;
-}
-
-#theme-switch + label::before {
-    content: '🌞';
-    display: inline-block;
-    width: 2em;
-    height: 1em;
-    background-color: #ff0;
-    border-radius: 1em;
-    text-align: center;
-    line-height: 1em;
+#theme-button {
+    background-color: #444;
+    color: white;
+    border: none;
+    padding: 10px;
     cursor: pointer;
-    transition: background-color 0.3s;
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 1em;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
 }
 
-#theme-switch:checked + label::before {
-    content: '🌜';
+#theme-button:hover {
     background-color: #333;
 }
 
