--- a/data/css/styles.css
+++ b/data/css/styles.css
@@ -59,3 +59,28 @@ img.lazyload.loaded {
         opacity: 1;
     }
 }
+
+footer {
+    text-align: center;
+    padding: 10px;
+    background-color: #f8f8f8;
+}
+
+.socials {
+    margin: 20px 0;
+}
+
+.socials a {
+    margin: 0 10px;
+    text-decoration: none;
+    font-size: 1.5em;
+    color: #000;
+}
+
+.socials a i {
+    margin-right: 5px;
+}
+
+.socials a:hover {
+    color: #ff6347; /* Change to your preferred hover color */
+}
